--- a/conf/character.yml
+++ b/conf/character.yml
@@ -1,19 +1,18 @@
 Basic:
     phoneme_type: False
-    
+    use_gpu : False
     #only available when character mode triggered
     char_path: ./asset/dict/ko.json
     train_img_path: ./train_data/Datasets/Train/
     
 Model:
-    hidden_size: 1024
+    hidden_size: 256
     output_size: 512
     input_size: 3
     use_tp: True
     
 Program:
     batch_size: 40
-    epochs: 500
-    learning_rate: 0.003
+    epochs: 100
+    learning_rate: 0.0008
     save_path: ./result/
-    saved_model: ./result/char/model_para:False_0.0003.pth
